--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -1,21 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="10sp">
 
     <TextView
         android:id="@+id/item_pokemon__textViewId"
-        android:layout_width="wrap_content"
+        android:layout_width="70sp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="10sp"
         android:padding="10sp"
         android:text="번호"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
-    <ImageView
-        android:id="@+id/item_pokemon__imageViewPokemon"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_weight="1" />
+    <TextView
+        android:id="@+id/item_pokemon__textViewName"
+        android:layout_width="150sp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10sp"
+        android:padding="10sp"
+        android:text="이름"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/item_pokemon__imageViewPokemon"
+            android:layout_width="0sp"
+            android:layout_height="0sp"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="H,3:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
