더 보기 버튼을 누르면, 그 때 포켓몬 정보를 서버에서 가져오도록

--- a/app/src/main/res/layout/item_pokemon_footer.xml
+++ b/app/src/main/res/layout/item_pokemon_footer.xml
@@ -4,12 +4,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
+    <Button
+        android:id="@+id/item_pokemon_footer__buttonLoadMore"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:padding="10sp"
-        android:text="FOOTER"
+        android:text="더 보기"
         android:textSize="20sp" />
 
 </LinearLayout>
