상세페이지에서 통신으로 포켓몬 이름정보 가져와서 노출

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".ui.DetailActivity">
 
         <TextView
             android:id="@+id/activity_detail__textViewId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10sp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/activity_detail__textViewName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10sp"
