--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,17 +3,12 @@
 
     <data>
 
-        <variable
-            name="id"
-            type="int" />
+        <import type="com.example.sbs.myapplication.Pokemon" />
 
         <variable
-            name="name"
-            type="String" />
+            name="pokemon"
+            type="Pokemon" />
 
-        <variable
-            name="imgUrl"
-            type="String" />
     </data>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,14 +34,14 @@
                     android:padding="10sp"
                     android:textSize="30sp"
                     android:textStyle="bold"
-                    app:numberText="@{id}" />
+                    app:numberText="@{pokemon.id}" />
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="10sp"
-                    android:text="@{name}"
+                    android:text="@{pokemon.name}"
                     android:textSize="30sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -59,7 +54,7 @@
                     android:layout_width="0sp"
                     android:layout_height="0sp"
                     android:scaleType="centerCrop"
-                    app:imgUrl="@{imgUrl}"
+                    app:imgUrl="@{pokemon.imgUrl}"
                     app:layout_constraintDimensionRatio="H,1:1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
