--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -34,14 +34,14 @@
                     android:padding="10sp"
                     android:textSize="30sp"
                     android:textStyle="bold"
-                    app:numberText="@{vm.pokemon.id}" />
+                    app:numberText="@{vm.lvPokemon.id}" />
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="10sp"
-                    android:text="@{vm.pokemon.name}"
+                    android:text="@{vm.lvPokemon.name}"
                     android:textSize="30sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -54,7 +54,7 @@
                     android:layout_width="0sp"
                     android:layout_height="0sp"
                     android:scaleType="centerCrop"
-                    app:imgUrl="@{vm.pokemon.imgUrl}"
+                    app:imgUrl="@{vm.lvPokemon.imgUrl}"
                     app:layout_constraintDimensionRatio="H,1:1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_gravity="center"
-                app:imgUrl="@{vm.bottomImgUrl}" />
+                app:imgUrl="@{vm.lvBottomImgUrl}" />
         </LinearLayout>
     </ScrollView>
 </layout>
