--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+        <variable
+            name="vm"
+            type="com.example.sbs.myapplication.ui.MainViewModel" />
+    </data>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +14,7 @@
         tools:context=".ui.MainActivity">
 
         <androidx.recyclerview.widget.RecyclerView
+            app:adapter="@{vm.recyclerViewPokemonAdapter}"
             android:id="@+id/activity_main__recyclerViewPokemon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
